<resources>
    <!-- App name & main titles-->
    <string name="app_name">PMovies</string>

    <!-- App menu -->
    <string name="sort_by_menu_item">Sort by</string>
    <string name="sort_by_most_popular_menu_item">Most popular</string>
    <string name="sort_by_top_rated_menu_item">Top rated</string>
    <string name="sort_by_favorites_menu_item">Favorites</string>

    <!--DetailFilmActivity strings -->
    <string name="film_rating">%s/10</string>
    <string name="no_film_title">Untitled</string>
    <string name="no_film_categories">Uncategorized</string>
    <string name="release_date_title">Release date: </string>
    <string name="add_to_favorites_title">Add to Favs</string>
    <string name="remove_from_favorites_title">Remove from Favs</string>
    <string name="add_to_favorites_toast">%1$s was added to favs.</string>
    <string name="remove_from_favorites_toast">%1$s was removed from favs.</string>
    <string name="trailers_title">Trailers</string>
    <string name="reviews_title">Reviews</string>
    <string name="unknown_review_author">Unkwnown</string>
    <string name="no_review_content">Empty</string>

    <!-- Content descriptions (ImageViews) -->
    <string name="film_poster_content_description">Film poster</string>
    <string name="film_backdrop_content_description">Film backdrop</string>
    <string name="film_review_author_content_description">Author review</string>
    <string name="film_review_content_content_description">Content review</string>
    <string name="film_add_to_favs_content_description">Add TMDBFilm to favs button</string>

    <!-- Connectivity AlertDialog (Wifi/3G) strings -->
    <string name="network_failure">Network connection failure</string>
    <string name="network_user_choice">No active network connection. The application cannot run
        properly. What would you like to do?</string>
    <string name="network_user_choice_no">Close App</string>
    <string name="network_user_choice_3g">Enable 3G</string>
    <string name="network_user_choice_wifi">Enable Wi-Fi</string>

    <!--No TMDB API Key AlertDialog stings-->
    <string name="no_api_key_failure">TMDB API Key failure.</string>
    <string name="no_api_key_user_choice">No TMDB API key. Data cannot be retrieved.
        In case you have already a valid API KEY, please read README.txt.
        Otherwise, please obtain your API KEY first from www.themoviedb.org</string>
    <string name="no_api_key_open_website">Open TMDB API FAQ</string>

</resources>
