<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/film_title_background"
    android:paddingVertical="@dimen/film_gridview_padding">

    <ImageView
        android:id="@+id/iv_film_review_author_icon"
        android:layout_width="48px"
        android:layout_height="48px"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/ic_name"
        android:contentDescription="@string/film_review_author_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_film_review_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/unknown_review_author"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_film_review_author_icon"
        app:layout_constraintStart_toEndOf="@+id/iv_film_review_author_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_film_review_author_icon" />

    <ImageView
        android:id="@+id/iv_film_review_content_icon"
        android:layout_width="48px"
        android:layout_height="48px"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_comment"
        android:contentDescription="@string/film_review_content_content_description"
        app:layout_constraintEnd_toEndOf="@+id/iv_film_review_author_icon"
        app:layout_constraintStart_toStartOf="@+id/iv_film_review_author_icon"
        app:layout_constraintTop_toBottomOf="@+id/iv_film_review_author_icon" />

    <com.udacity.pmovies.ui.widgets.ExpandableTextView
        android:id="@+id/tv_film_review_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/no_review_content"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_film_review_content_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_film_review_content_icon" />

</android.support.constraint.ConstraintLayout>